--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +15,12 @@
 <body>
     <header>
         <nav id="navbar" class="navbar bg-primary" data-bs-theme="dark">
-            <a class="navbar-brand">Home</a>
-            <a class="navbar-brand">About Us</a>
-            <a class="navbar-brand">Products</a>
-            <a class="navbar-brand">Services</a>
-            <a class="navbar-brand">Reviews</a>
-            <a class="navbar-brand">Blog</a>
+            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="navbar-brand" href="aboutUs.html">About Us</a>
+            <a class="navbar-brand" href="products.html">Products</a>
+            <a class="navbar-brand" href="services.html">Services</a>
+            <a class="navbar-brand" href="reviews.html">Reviews</a>
+            <a class="navbar-brand" href="blog.html">Blog</a>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-light" type="submit">Search</button>
@@ -38,14 +39,14 @@
             <div class="container-short-paragraphe">
                 <p>Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raíces en una pieza clásica de la literatura del Latín, que data del año 45 antes de Cristo, haciendo que este adquiera más de 2000 años de antigüedad.</p>
             </div>
-            <div>
+            <div style="display: flex; flex-direction: row; justify-content: center;">
                 <iframe  class="container-video" src="https://www.youtube.com/embed/fis26HvvDII?si=8B0_U6j4kf-4UNBx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
         <section class="button-options container">
-            <button type="button" class="btn btn-outline-primary">Primary</button>
-            <button type="button" class="btn btn-outline-warning">Warning</button>
-            <button type="button" class="btn btn-outline-info">Information</button>
+            <button type="button">Primary</button>
+            <button type="button">Warning</button>
+            <button type="button">Information</button>
         </section>
         <section class="grid-container container">
             <div class="form-container" >
@@ -70,7 +71,7 @@
                     <button type="submit" class="btn btn-success">Submit</button>
                 </form>
             </div>
-            <div id="image1" class="img-fluid">
+            <div id="image1" class="img-fade">
                 <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Expression-Header-2880x1200_1.width-1200.format-webp.webp">
             </div>
             <div  id="image2">
@@ -100,8 +101,31 @@
                 </div>
             </div>
         </section>
-       
-
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="tu-logo.png" alt="Logo">
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Versions</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy;2023 Your Page. All rights reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
